compiler/actonc/test/typeerrors/funargs3.golden
Building file test/typeerrors/funargs3.act using temporary scratch directory

ERROR: Error when compiling funargs3 module: Syntax error

test/typeerrors/funargs3.act:4:11:
  |
4 | a = f(x=3,4)
  |           ^
unexpected '4'
expecting "**" or a closing parenthesis

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

